# StaticInjector

./: .gitignore  CMakeLists.txt  README.md  build.xml  settings.gradle
androidTest/: CMakeLists.txt  build.gradle
androidTest/src/main/java/com/chickenhook/staticinjector/: MainActivity.kt
androidTest/src/main/res/values/: strings.xml
androidTest/src/test/java/com/chickenhook/staticinjector/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/chickenhook/staticinjector/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
linuxTest/: CMakeLists.txt  main.cpp
linuxTest/exampleAttack/: CMakeLists.txt  hook.cpp  libgcc_s.so.1.cpp  symbolHook.cpp  symbolhook.h
linuxTest/firefoxAttack/: CMakeLists.txt
linuxTest/skypeAttack/: CMakeLists.txt  libkrb5support.so.0.cpp
linuxTest/spotifyAttack/: CMakeLists.txt  README.md  symbolHook.cpp
src/: BinaryEditor.cpp  BinaryEditor.h  CMakeLists.txt
src/architectures/: IArchitecture.cpp  IArchitecture.h  x86_64.h
src/architectures/arm/: arm64_v8a.cpp  arm64_v8a.h
src/architectures/intel/: x86_64.cpp  x86_64.h
src/generators/: SymbolHookGenerator.cpp  SymbolHookGenerator.h
src/include/chickenHook/staticInjector/: BinaryEditor.h  IBinary.h
src/tools/: HexDump.cpp  HexDump.h  LoggingCallback.cpp  LoggingCallback.h
